[package]
name = "wasm_citiescrowl"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
csv = "1.1.6"
getrandom = { version = "0.2.8", features = ["js"] }
js-sys = "0.3.60"
log = "0.4.17"
rand = "0.8.5"
reqwest-wasm = "0.11.16"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
url = "2.3.1"
wasm-bindgen = "0.2.83"
wasm-bindgen-futures = "0.4.33"
wasm-logger = "0.2.0"
wasm-timer = "0.2.5"

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[dependencies.web-sys]
version = "0.3.60"
features = [
  'Headers',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'EventTarget',
  'MouseEvent',
  'Window',
]

[target.wasm32-unknown-unknown.dependencies]
parking_lot = { version = "0.11.2", features = ["wasm-bindgen"]}
